syntax = "proto3";
package connect;
option go_package = "gim/pkg/protocol/pb/connectpb";

import "google/protobuf/empty.proto";

import "logic/message.ext.proto";

service ConnectIntService {
  //  消息投递
  rpc PushToDevices (PushToDevicesRequest) returns (google.protobuf.Empty);
}

message PushToDevicesRequest {
  repeated DeviceMessage DeviceMessageList = 1;
}

message DeviceMessage{
  uint64 device_id = 1; // 设备ID
  logic.Message message = 2; // 消息
}

// 房间推送
message PushRoomMsg{
  uint64 room_id = 1; // 设备id
  logic.Message message = 2; // 数据
}

// 房间推送
message PushAllMsg{
  logic.Message message = 2; // 数据
}